/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.6.2/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'
	id 'eclipse'

    // Apply the application plugin to add support for building a CLI application
    id 'application'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

dependencies {
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:28.0-jre'
    
	// https://mvnrepository.com/artifact/com.twitter/finatra-http
	compile group: 'com.twitter', name: 'finatra-http_2.12', version: '19.10.0'
	
	// https://mvnrepository.com/artifact/com.twitter/finatra-httpclient
	compile group: 'com.twitter', name: 'finatra-httpclient_2.12', version: '19.10.0'
	
	// https://mvnrepository.com/artifact/com.twitter/finatra-thrift
	compile group: 'com.twitter', name: 'finatra-thrift_2.12', version: '19.10.0'

    // https://mvnrepository.com/artifact/com.twitter/finagle-http
	compile group: 'com.twitter', name: 'finagle-http_2.12', version: '19.10.0'
    
    // https://mvnrepository.com/artifact/com.newrelic.agent.java/newrelic-api
	compile group: 'com.newrelic.agent.java', name: 'newrelic-api', version: '5.8.0'
	
	// https://mvnrepository.com/artifact/io.lettuce/lettuce-core
	compile group: 'io.lettuce', name: 'lettuce-core', version: '5.2.1.RELEASE'
	

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

application {
    // Define the main class for the application
    mainClassName = 'com.twitter.hello.server.HelloWorldServerMain'
    applicationDefaultJvmArgs = ['-javaagent:/home/ubuntu/newrelic/newrelic.jar', '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=500', 
    			'-XX:ParallelGCThreads=23', '-XX:ConcGCThreads=6', '-XX:G1HeapRegionSize=16m', '-XX:MaxTenuringThreshold=7', '-XX:+UseStringDeduplication',
				'-XX:NumberOfGCLogFiles=30', '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-XX:+UseGCLogFileRotation', '-XX:NumberOfGCLogFiles=5', '-XX:GCLogFileSize=1024K',
				'-Xloggc:/tmp/java_gc.log', '-Djava.net.preferIPv4Stack=true', '-Dsun.net.inetaddr.ttl=0', '-Dsun.net.inetaddr.negative.ttl=0', '-XX:+PrintCommandLineFlags', 
				'-XX:+UseBiasedLocking', '-XX:MaxJavaStackTraceDepth=100', '-Xms16G', '-Xmx16G', '-XX:MaxMetaspaceSize=256m', '-XX:ErrorFile=/tmp/java_error.log', '-XX:OnError=kill -9 %p',
				'-XX:+HeapDumpOnOutOfMemoryError', '-XX:HeapDumpPath=/tmp/java_heap.hprof','-XX:OnOutOfMemoryError=kill -9 %p', '-Dfile.encoding=UTF-8', '-Dsun.jnu.encoding=UTF-8',
				'-XX:+PreserveFramePointer']
}


jar {
    manifest {
        attributes "Main-Class": "com.twitter.hello.server.HelloWorldServerMain"
    }
 
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
